@@ -1,7 +1,7 @@
 #  File src/library/base/R/table.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2020 The R Core Team
+#  Copyright (C) 1995-2021 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -50,7 +50,7 @@ table <- function (..., exclude = if (useNA=="no") c(NA, NaN),
     args <- list(...)
     if (length(args) == 1L && is.list(args[[1L]])) { ## e.g. a data.frame
 	args <- args[[1L]]
-	if (length(dnn) != length(args))
+	if(length(args) == 1L || length(dnn) != length(args))
 	    dnn <- if (!is.null(argn <- names(args))) argn
 		   else paste(dnn[1L], seq_along(args), sep = ".")
     }
